--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -62,7 +62,7 @@ body.blue .uline {
 body [class$="basic"],
 body.blue [class$="basic"]  {
   background-color: #0994ff;
-  border:0.1rem solid #0994ff;
+  border:1px solid #0994ff;
   color: #fff;
 }
 
@@ -71,7 +71,7 @@ body.blue [class$="white"],
 body .on_w,
 body.blue .on_w {
   background-color: #fff;
-  border:0.1px solid #0994ff;
+  border:1px solid #0994ff;
   color: #0994ff;
 }
 
@@ -125,12 +125,12 @@ body.red a {
 }
 
 body.red .uline {
-    border-bottom:1px solid #ff5450
+  border-bottom:1px solid #ff5450
 }
 
 body.red [class$="basic"] {
   background-color: #ff4160;
-  border:0.1rem solid #ff4160;
+  border:1px solid #ff4160;
   color: #fff;
 }
 
@@ -188,7 +188,7 @@ body.green .uline {
 
 body.green [class$="basic"]  {
   background-color: #00ac6d;
-  border:0.1rem solid #00ac6d;
+  border:1px solid #00ac6d;
   color: #fff;
 }
 
@@ -247,7 +247,7 @@ body.bw .uline {
 
 body.bw [class$="basic"]  {
   background-color: #333;
-  border:0.1rem solid #333;
+  border:1px solid #333;
   color: #fff;
 }
 
